--- a/styles/accordion.css
+++ b/styles/accordion.css
@@ -1,7 +1,7 @@
 .accordion {
 
-    background-color: rgb(27, 27, 27);
-    color: #12bbf8;
+    background-color: var(--contact-card);
+    color: var(--accent-color-one);
     cursor: pointer;
     height: 55px;
     width: 100%;
@@ -9,7 +9,7 @@
     border: none;
     border-radius: 10px;
     outline: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--default-font-family);
     overflow: hidden;
     
 
